Bug 244317 - kpresenter:msoffice2000:kpresenter is not displaying the embeded notepad
Summary: kpresenter:msoffice2000:kpresenter is not displaying the embeded notepad
Status: VERIFIED FIXED
Alias: None
Product: koffice
Classification: Unmaintained
Component: filters (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries All
: NOR normal
Target Milestone: ---
Assignee: KOffice Bug Wranglers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-05-28 09:01 UTC by Lassi Nieminen
Modified: 2011-04-12 09:21 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
MS Powerpoint 2000 document to be open in Kpresenter (12.00 KB, application/vnd.ms-powerpoint)
2010-05-28 09:01 UTC, Lassi Nieminen
Details
Screenshot of the document in MS Powerpoint (2.25 MB, image/bmp)
2010-05-28 09:07 UTC, Lassi Nieminen
Details
Screenshot of the document in Kpresenter (95.32 KB, image/pjpeg)
2010-05-28 09:09 UTC, Lassi Nieminen
Details

Note You need to log in before you can comment on or make changes to this bug.
Description David Faure 2010-07-12 17:55:37 UTC


---- Reported by lassi.ta.nieminen@nokia.com 2010-05-28 10:01:09 +0300 ----

Created an attachment
MS Powerpoint 2000 document to be open in Kpresenter

SOFTWARE VERSION:
Kubuntu version 9.10
KOffice Version 1130003
Test Document(MS Office 2000):mp00_embeded_notepad.ppt

STEPS LEADING TO PROBLEM: 
1.Open the PPT in MS Powerpoint 2000.
2.Open the same document in KPresenter.
3.Observe the embeded notepad in the slide.

EXPECTED OUTCOME:
kpresenter should be able to display the embeded notepad.

ACTUAL OUTCOME:
kpresenter is not displaying the embeded notepad.

FREQUENCY OF OCCURRENCE: 
Always



---- Additional Comments From lassi.ta.nieminen@nokia.com 2010-05-28 10:07:37 +0300 ----

Created an attachment
Screenshot of the document in MS Powerpoint



---- Additional Comments From lassi.ta.nieminen@nokia.com 2010-05-28 10:09:30 +0300 ----

Created an attachment
Screenshot of the document in Kpresenter



---- Additional Comments From lassi.ta.nieminen@nokia.com 2010-06-06 01:44:19 +0300 ----

wmf problem --> reassign to ingwa



--- Bug imported by faure@kde.org 2010-07-12 17:55  ---

This bug was previously known as _bug_ 171116.

Imported an attachment (id=48826)
Imported an attachment (id=48827)
Imported an attachment (id=48828)
Comment 1 Inge Wallin 2010-12-04 16:36:10 UTC
SVN commit 1203564 by ingwa:

Fix bug 244317: presenter:msoffice2000:kpresenter is not displaying the embeded notepad

A WMF string always occupies an even number of bytes, so if the actual
length is uneven, then read another dummy byte.

BUG: 244317


 M  +7 -0      kowmfreadprivate.cc  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1203564
Comment 2 swathi 2011-04-12 09:21:58 UTC
Verified in  gir commit text-layoutrestructure-boemann branch.