Fix bug 244317: presenter:msoffice2000:kpresenter is not displaying the embeded notepad

A WMF string always occupies an even number of bytes, so if the actual
length is uneven, then read another dummy byte.

BUG: 244317

svn path=/branches/work/koffice-essen/; revision=1203564